2024-06-02 Konstantin Kushnir <chpock@gmail.com>
	* Don't allow deleting pages/fsindex that are in use
	* Optimize c-readerchannel
	* Add a full-featured mount command for use from C
	* Fix debug build on 32-bit platforms

2024-06-01 Konstantin Kushnir <chpock@gmail.com>
	* Add in-memory vfs feature
	* Change XZ format to plain LZMA
	* Remove sha1/sha256 hash functions
	* Add a simple mount command for use from C

2024-05-31 Konstantin Kushnir <chpock@gmail.com>
	* Fix build and tests for Windows platform
	* Add support for attributes
	* Fix build with --disable-xz

2024-05-30 Konstantin Kushnir <chpock@gmail.com>
	* Fix multiple memory leaks
	* Add feature to build without Tcl commands
	* Add support for Tcl 9.0
	* Treat compiler warnings as errors

2024-05-29 Konstantin Kushnir <chpock@gmail.com>
	* Fix a regression when register volume and unregister with vfs::unmount
	* Add memory leak hunter to tests

2024-05-28 Konstantin Kushnir <chpock@gmail.com>
	* Add cppcheck

2024-05-27 Konstantin Kushnir <chpock@gmail.com>
	* Fix a bug when deleting the last entry from small file buffer
	* Add support for optimize list command for c-vfs

2024-05-26 Konstantin Kushnir <chpock@gmail.com>
	* Add tests for writer
	* Fix build without c-pages, but with c-fsindex
	* Add the ability to detect truncated archives
	* Replace all memory related API to debug-enabled
	* Optimize block statistics in fsindex

2024-05-25 Konstantin Kushnir <chpock@gmail.com>
	* Add support for writer in C

2024-05-21 Konstantin Kushnir <chpock@gmail.com>
	* Add support for vfs in C
	* Make the writer object available for C functions
	* Make the ::cookfs::Unmount command preferred over vfs::unmount
	* Make the ::cookfs::Unmount command accept both fsid and mount point
	* Update 7z lib (xz/lzma2 support) from 23.01 to 24.05
	* Fix compiler warnings in --enable-internal-debug mode
	* Add a presentation from the original authors
	* Add multiple configurations to github workflows