@@ -1,3 +1,6 @@
+2024-06-03 Konstantin Kushnir <chpock@gmail.com>
+	* Provide proper operation between interps for c-vfs
+
 2024-06-02 Konstantin Kushnir <chpock@gmail.com>
 	* Don't allow deleting pages/fsindex that are in use
 	* Optimize c-readerchannel
